0.83.1
  - Added support for DOS programs to communicate
    with the clipboard in Windows builds. If the
    "dos clipboard device enable" setting in
    dosbox.conf is set to "true" or "full", a DOS
    device (default name: CLIP$) will be added to
    allow bidirectional communications with the
    clipboard (e.g. "DIR >CLIP$" will write the
    output to the clipboard, and "TYPE CLIP$" will
    show the clipboard contents). Alternatively,
    you can set it to "read" or "write" to allow
    only read or write access for security reasons.
    The DOS device name can also be changed with
    the "dos clipboard device name" setting in
    dosbox.conf. (Wengier)
  - Updated the PasteClipboard feature to support
    Unicode text translations. (Wengier)
  - Long filename support added, adapted from
    the vDosPlus project. It will be enabled with
    an initial DOS version of 7.0 or higher. (Wengier)
  - Corrected return value when using option to
    fake the installation of SHARE. (Allofich)
  - Added code to EMS emulation to print specific
    debug information when a PC-98 specific call is
    made to remap segment B000h to either system
    memory or video memory. I do not have enough
    test cases or a setup to test what really happens,
    so it will remain a debug message for now.
  - Added dosbox.conf option to allow emulation of a
    DOS environment that lacks ANSI.SYS. NOTE: The
    option has no effect in PC-98 mode.
  - INT 2Fh now responds to AX=1A00h which is an installation
    check to report whether ANSI.SYS is resident.
  - Added INT 21h debug logging for file I/O and general
    INT 21h usage [patch by ognjenmi]. Added enables for
    the logging which are off by default since the INT 21h
    and file I/O logging are fairly noisy under normal
    usage.

0.83.0
  - Added mt32.romdir dosbox.conf configuration option
    for users who store the MT32 ROMs elsewhere other
    than the current working directory.